--- a/SQLiteNotes/MVVM/Views/MenuView.xaml
+++ b/SQLiteNotes/MVVM/Views/MenuView.xaml
@@ -1,16 +1,15 @@
-﻿<Page x:Class="SQLiteNotes.Pages.MainMenu"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:SQLiteNotes.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="500" d:DesignWidth="1000"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      Title="MainMenu">
-
+﻿<UserControl x:Class="SQLiteNotes.MVVM.Views.MenuView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:SQLiteNotes.MVVM.Views"
+             xmlns:viewmodels="clr-namespace:SQLiteNotes.MVVM.ViewModels"
+              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ListBox x:Name="lbTitles" HorizontalAlignment="Left" Width="195" ItemsSource="{Binding}" Margin="0,90,0,0" SelectionChanged="lbTitles_SelectionChanged">
+        <ListBox x:Name="lbTitles" HorizontalAlignment="Left" Width="195" ItemsSource="{Binding}" Margin="0,90,0,0">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -30,27 +29,19 @@
             TextWrapping="Wrap"
             VerticalScrollBarVisibility="Auto" Margin="200,120,0,0" Width="581" />
 
-        <Button x:Name="btAddNote"
-                Content="Добавить"
-                HorizontalAlignment="Right"
+        <Button Content="Добавить"
                 Margin="0,365,10,0"
-                VerticalAlignment="Top"
-                Width="165"
-                FontFamily="Bookman Old Style"
-                Background="#FF0A550F"
-                Click="btAddNote_Click"/>
-        <Button x:Name="btDelNote"
-                Content="Удалить"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                Width="165"
-                FontFamily="Bookman Old Style" 
-                Background="#FF0A550F" Click="btDelNote_Click"/>
-        <Button x:Name="btSave" Content="Сохранить" HorizontalAlignment="Right" Margin="0,120,10,0" VerticalAlignment="Top" Width="165" FontFamily="Bookman Old Style" Background="#FF0A550F" Click="btSave_Click"/>
+                Style="{StaticResource OldButtonStyle}"/>
+        <Button Content="Удалить" 
+                Margin="0,328,10,0"
+                Style="{StaticResource OldButtonStyle}"/>
+        <Button Content="Сохранить"
+                Style="{StaticResource OldButtonStyle}"
+                Margin="0,120,10,0"/>
         <TextBox
             x:Name="tbNewNote"
             HorizontalAlignment="Right"
-    MaxWidth="400"
+            MaxWidth="400"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Введите название"
     AcceptsReturn="True"
@@ -90,4 +81,4 @@
             Style="{StaticResource MaterialDesignFilledTextBox}"
             TextWrapping="Wrap" Margin="0,252,10,0" Width="165" />
     </Grid>
-</Page>
+</UserControl>
